added some interface

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -1,11 +1,14 @@
 <html>
     <head>
         <title>Sushi</title>
-        <link rel="stylesheet" href="/Styles/index.css">
+        <!-- <link rel="stylesheet" href="/Styles/index.css"> -->
+        <link rel="stylesheet" href="../Styles/index.css">
+
     </head>
     <body class="container">
         <header class = "top-panel">
-            </header>
+            <div class="profile-icon"></div>
+        </header>
         
 
     </body>
