Added profile registration page + links to registration page and back to main page

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -7,9 +7,17 @@
     </head>
     <body class="container">
         <header class = "top-panel">
-            <div class="profile-icon"></div>
+            <div class="custom-font">Суши</div>
+            <button class="profile-icon" onclick="goToPage('../Pages/register.html')"></button>
+
         </header>
         
 
     </body>
+    <script>
+        function goToPage(url){
+            document.location.href = url
+        }
+
+        </script>
 </html>
