Localization in register

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Sushi</title>
+        <title>главный по суши</title>
         <!-- <link rel="stylesheet" href="/Styles/index.css"> -->
         <link rel="stylesheet" href="../Styles/index.css">
 
