--- a/Pages/register.html
+++ b/Pages/register.html
@@ -1,31 +1,31 @@
 <html>
     <head>
-        <title>Sushi</title>
+        <title>регистрация на главного по суши</title>
         <!-- <link rel="stylesheet" href="/Styles/index.css"> -->
         <link rel="stylesheet" href="../Styles/regstyle.css">
 
     </head>
     <body class="container">
 <form class="form">
-    <p class="form-title">Sign in to your account</p>
+    <p class="form-title">Войдите в свой аккаунт</p>
      <div class="input-container">
-       <input type="email" placeholder="Enter email">
+       <input type="Эл. почта" placeholder="Введите эл. почту">
        <span>
        </span>
    </div>
    <div class="input-container">
-       <input type="password" placeholder="Enter password">
+       <input type="password" placeholder="Введите пароль">
      </div>
       <button type="submit" class="submit">
-     Sign in
+     Войти
    </button>
 
    <p class="signup-link">
-     No account?
-     <a href="">Sign up</a>
+     Нет аккаунта?
+     <a href="">Регистрация</a>
    </p>
    <p class = "back-link">
-    <a href="../Pages/main.html">Back</a>
+    <a href="../Pages/main.html">Назад</a>
    </p>
 </form>
 
