Added search bar

--- a/Pages/main.html
+++ b/Pages/main.html
@@ -8,6 +8,7 @@
     <body class="container">
         <header class = "top-panel">
             <div class="custom-font">Суши</div>
+            <input class="input" name="text" placeholder="Search..." type="search">
             <button class="profile-icon" onclick="goToPage('../Pages/register.html')"></button>
 
         </header>
