--- a/Pages/main.html
+++ b/Pages/main.html
@@ -16,49 +16,54 @@
         <br>
         <br>
         <br>
-        <table style="border-collapse: collapse; width: 100%;">
+        <table style="border-collapse: collapse; width: 100%; margin: 0; padding: 0;">
             <tr>
-                <td style="border: none; padding: 10px;">
-                    <div class="product-cell" style="border: 1px solid #ccc; padding: 10px; width: 150px; text-align: center; margin: 10px; display: inline-block;">
-                        <img src="../Styles/img/photo0jpg.jpg" alt="Суши с терияки" style="width: 100%; height: auto;">
+                <td style="border: none; padding: 0;">
+                    <div class="product-cell" style="padding: 10px; width: 125px; text-align: center; margin: 0; display: inline-block;">
+                        <img src="../Styles/img/photo0jpg.jpg" alt="Суши с терияки" style="width: 125px; height: auto;">
                         <h3 style="font-size: 1.2em;">Суши с терияки</h3>
                         <p style="font-size: 0.9em;">Суши из форели, водорослей, сливочного соуса, огурцев и соуса терияки</p>
                         <div class="input-group quantity_goods" style="margin: 5px 0;">
                             <input type="number" step="1" min="1" max="10" value="1" style="width: 50px; text-align: center;">
-                            <input type="button" value="+" onclick="" style="width: 30px;">
-                            <input type="button" value="-" onclick="" style="width: 30px;">
                         </div>
                         <button onclick="" style="background-color: #28a745; color: white; border: none; padding: 5px 10px; cursor: pointer;">Добавить в корзину</button>
                     </div>
                 </td>
-                <td style="border: none; padding: 10px;">
-                    <div class="product-cell" style="border: 1px solid #ccc; padding: 10px; width: 150px; text-align: center; margin: 10px; display: inline-block;">
-                        <img src="../Styles/img/1eefcf4a097f5e3f325acf638484be---jpg_800x500_whitepadding15_fb108_convert.jpg" alt="Суши Филадельфия" style="width: 100%; height: auto;">
+                <td style="border: none; padding: 0;">
+                    <div class="product-cell" style="padding: 10px; width: 125px; text-align: center; margin: 0; display: inline-block;">
+                        <img src="../Styles/img/1eefcf4a097f5e3f325acf638484be---jpg_800x500_whitepadding15_fb108_convert.jpg" alt="Суши Филадельфия" style="width: 125px; height: auto;">
                         <h3 style="font-size: 1.2em;">Суши Филадельфия</h3>
-                        <p style="font-size: 0.9em;">Суши из красной рыбы, водорослей, сливочного соуса и огурцев</p>
+                        <p style="font-size: 0.9em;">Суши из красной рыбы, водорослей, сливочного соуса и огурцов</p>
                         <div class="input-group quantity_goods" style="margin: 5px 0;">
                             <input type="number" step="1" min="1" max="10" value="1" style="width: 50px; text-align: center;">
-                            <input type="button" value="+" onclick="" style="width: 30px;">
-                            <input type="button" value="-" onclick="" style="width: 30px;">
                         </div>
                         <button onclick="" style="background-color: #28a745; color: white; border: none; padding: 5px 10px; cursor: pointer;">Добавить в корзину</button>
                     </div>
                 </td>
-                <td style="border: none; padding: 10px;">
-                    <div class="product-cell" style="border: 1px solid #ccc; padding: 10px; width: 150px; text-align: center; margin: 10px; display: inline-block;">
-                        <img src="../Styles/img/images.jpg" alt="Суши Нигири" style="width: 100%; height: auto;">
+                <td style="border: none; padding: 0;">
+                    <div class="product-cell" style="padding: 10px; width: 125px; text-align: center; margin: 0; display: inline-block;">
+                        <img src="../Styles/img/images.jpg" alt="Суши Нигири" style="width: 125px; height: auto;">
                         <h3 style="font-size: 1.2em;">Суши Нигири</h3>
                         <p style="font-size: 0.9em;">Суши из красной рыбы, риса и водорослей</p>
                         <div class="input-group quantity_goods" style="margin: 5px 0;">
                             <input type="number" step="1" min="1" max="10" value="1" style="width: 50px; text-align: center;">
-                            <input type="button" value="+" onclick="" style="width: 30px;">
-                            <input type="button" value="-" onclick="" style="width: 30px;">
                         </div>
                         <button onclick="" style="background-color: #28a745; color: white; border: none; padding: 5px 10px; cursor: pointer;">Добавить в корзину</button>
                     </div>
                 </td>
-                <td style="border: none; padding: 10px;">Элемент 4</td>
+                <td style="border: none; padding: 0;">
+                    <div class="product-cell" style="padding: 10px; width: 125px; text-align: center; margin: 0; display: inline-block;">
+                        <img src="../Styles/img/kanada-sushi-roll.jpg" alt="Канада суши" style="width: 125px; height: auto;">
+                        <h3 style="font-size: 1.2em;">Канада суши</h3>
+                        <p style="font-size: 0.9em;">Суши из красной рыбы, риса, водорослей, огурца и сливочного соуса</p>
+                        <div class="input-group quantity_goods" style="margin: 5px 0;">
+                            <input type="number" step="1" min="1" max="10" value="1" style="width: 50px; text-align: center;">
+                        </div>
+                        <button onclick="" style="background-color: #28a745; color: white; border: none; padding: 5px 10px; cursor: pointer;">Добавить в корзину</button>
+                    </div>
+                </td>
             </tr>
+        </table>
             <!-- <tr>
                 <td style="border: none; padding: 10px;">Элемент 5</td>
                 <td style="border: none; padding: 10px;">Элемент 6</td>
