--- a/Pages/main.html
+++ b/Pages/main.html
@@ -62,6 +62,9 @@
                         <button onclick="" style="background-color: #28a745; color: white; border: none; padding: 5px 10px; cursor: pointer;">Добавить в корзину</button>
                     </div>
                 </td>
+                <td style="width: 150px; height: 150px">
+                    <button style="width: 100%; height: 100%; background: #5b5fc7" onclick="document.location.href='https://github.com/DeLucio777/Sushi' ">Тут могла быть ваша реклама</button>
+                </td>
             </tr>
         </table>
             <!-- <tr>
