--- a/Pages/register.html
+++ b/Pages/register.html
@@ -1,35 +1,37 @@
-<html>
-    <head>
-        <title>регистрация на главного по суши</title>
-        <!-- <link rel="stylesheet" href="/Styles/index.css"> -->
-        <link rel="stylesheet" href="../Styles/regstyle.css">
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <title>регистрация на главного по суши</title>
+    <!-- <link rel="stylesheet" href="/Styles/index.css"> -->
+    <link rel="stylesheet" href="../Styles/regstyle.css">
 
-    </head>
-    <body class="container">
+    <link rel="stylesheet" href="/Styles/regstyle.css">
+</head>
+<body class="container">
 <form class="form">
     <p class="form-title">Войдите в свой аккаунт</p>
-     <div class="input-container">
-       <input type="Эл. почта" placeholder="Введите эл. почту">
-       <span>
+    <div class="input-container">
+        <input type="Эл. почта" placeholder="Введите эл. почту">
+        <span>
        </span>
-   </div>
-   <div class="input-container">
-       <input type="password" placeholder="Введите пароль">
-     </div>
-      <button type="submit" class="submit">
-     Войти
-   </button>
+    </div>
+    <div class="input-container">
+        <input type="password" placeholder="Введите пароль">
+    </div>
+    <button type="submit" class="submit">
+        Войти
+    </button>
 
-   <p class="signup-link">
-     Нет аккаунта?
-     <a href="">Регистрация</a>
-   </p>
-   <p class = "back-link">
-    <a href="../Pages/main.html">Назад</a>
-   </p>
+    <p class="signup-link">
+        Нет аккаунта?
+        <a href="">Регистрация</a>
+    </p>
+    <p class="back-link">
+        <a href="../Pages/main.html">Назад</a>
+    </p>
 </form>
-
-        
-
-    </body>
+</body>
+<script>
+    
+</script>
 </html>
