--- a/Pages/main.html
+++ b/Pages/main.html
@@ -8,7 +8,7 @@
     <body class="container" text="white">
         <header class = "top-panel">
             <div class="custom-font">Суши</div>
-            <input class="input" name="text" placeholder="Search..." type="search">
+            <input class="input" name="text" placeholder="Поиск..." type="search">
             <button class="profile-icon" onclick="goToPage('../Pages/register.html')"></button>
 
         </header>
@@ -63,7 +63,7 @@
                     </div>
                 </td>
                 <td style="width: 150px; height: 150px">
-                    <button style="width: 100%; height: 100%; background: #5b5fc7" onclick="document.location.href='https://github.com/DeLucio777/Sushi' ">Тут могла быть ваша реклама</button>
+                    <button style="width: 100%; height: 100%; background: white" onclick="document.location.href='https://github.com/DeLucio777/Sushi' ">Тут могла быть ваша реклама</button>
                 </td>
             </tr>
         </table>
