--- a/Pages/full_register.html
+++ b/Pages/full_register.html
@@ -1,15 +1,15 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>авторизация на главного по суши</title>
+    <title>регистрация на главного по суши</title>
     <!-- <link rel="stylesheet" href="/Styles/index.css"> -->
     <link rel="stylesheet" href="../Styles/regstyle.css">
 
     <link rel="stylesheet" href="/Styles/regstyle.css">
 </head>
 <body class="container">
-<form class="form" >
-    <p class="form-title">Войдите в свой аккаунт</p>
+<form class="form">
+    <p class="form-title">Зарегестрируйте свой аккаунт</p>
     <div class="input-container">
         <input type="Эл. почта" placeholder="Введите эл. почту">
         <span>
@@ -18,13 +18,16 @@
     <div class="input-container">
         <input type="password" placeholder="Введите пароль">
     </div>
+    <div class="input-container">
+        <input type="password" placeholder="Повторите пароль">
+    </div>
     <button type="submit" class="submit">
-        Войти
+        Регистрация
     </button>
 
     <p class="signup-link">
-        Нет аккаунта?
-        <a href="../Pages/full_register.html">Регистрация</a>
+        Есть аккаунт?
+        <a href="../Pages/register.html">Авторизация</a>
     </p>
     <p class="back-link">
         <a href="../Pages/main.html">Назад</a>
