--- a/Pages/main.html
+++ b/Pages/main.html
@@ -16,6 +16,16 @@
         <br>
         <br>
         <br>
+        <h1>Содержание</h1>
+        <ul>
+            <li><a href="#section1">Раздел 1</a></li>
+            <li><a href="#section2">Раздел 2</a></li>
+            <li><a href="#section3">Раздел 3</a></li>
+        </ul>
+    
+        <div id="section1" class="section">
+            <div class="section-title">Суши и роллы</div>
+        </div>
         <table style="border-collapse: collapse; width: 100%; margin: 0; padding: 0;">
             <tr>
                 <td style="border: none; padding: 0;">
@@ -64,6 +74,24 @@
                 </td>
                 <td style="width: 150px; height: 150px">
                     <button style="width: 100%; height: 100%; background: white" onclick="document.location.href='https://github.com/DeLucio777/Sushi' ">Тут могла быть ваша реклама</button>
+                </td>
+            </tr>
+        </table>
+        <div id="section2" class="section">
+            <div class="section-title">Напитки</div>
+        </div>
+        <table style="border-collapse: collapse; width: 100%; margin: 0; padding: 0;">
+            <tr>
+                <td style="border: none; padding: 0;">
+                    <div class="product-cell" style="padding: 10px; width: 125px; text-align: center; margin: 0; display: inline-block;">
+                        <img src="../Styles/img/464731543027662.jpg" alt="Канада суши" style="width: 125px; height: auto;">
+                        <h3 style="font-size: 1.2em;">Кока-кола</h3>
+                        <p style="font-size: 0.9em;">Освежающий газированный напиток. 0,5 л</p>
+                        <div class="input-group quantity_goods" style="margin: 5px 0;">
+                            <input type="number" step="1" min="1" max="10" value="1" style="width: 50px; text-align: center;">
+                        </div>
+                        <button onclick="" style="background-color: #28a745; color: white; border: none; padding: 5px 10px; cursor: pointer;">Добавить в корзину</button>
+                    </div>
                 </td>
             </tr>
         </table>
