--- a/Pages/main.html
+++ b/Pages/main.html
@@ -8,7 +8,15 @@
     <body class="container" text="white">
         <header class = "top-panel">
             <div class="custom-font">Суши</div>
-            <input class="input" name="text" placeholder="Поиск..." type="search">
+            <!--<input class="input" name="text" placeholder="Поиск..." type="search">!-->
+            <div class="navbar">
+                <div class="nav-links">
+                    <a href="#sushi">Суши</a>
+                    <a href="#rolls">Роллы</a>
+                    <a href="#drinks">Напитки</a>
+                    <a href="#other">Другое</a>
+                </div>
+            </div>
             <button class="profile-icon" onclick="goToPage('../Pages/register.html')"></button>
 
         </header>
