--- a/Pages/register.html
+++ b/Pages/register.html
@@ -33,7 +33,7 @@
 </body>
 <script>
     async function checkData(uName, uPassword) {
-        alert('/api/user_by_params?user_name=' + encodeURIComponent(uName) + '&user_password=' + encodeURIComponent(uPassword))
+        // alert('/api/user_by_params?user_name=' + encodeURIComponent(uName) + '&user_password=' + encodeURIComponent(uPassword))
         try {
             const response = await fetch('/api/user_by_params?user_name=' + encodeURIComponent(uName) + '&user_password=' + encodeURIComponent(uPassword), {
                 method: 'GET',
