--- a/Pages/main.html
+++ b/Pages/main.html
@@ -26,6 +26,7 @@
         <br>
         <button style="width: 100%; height: 20%; background: white" onclick="document.location.href='https://github.com/DeLucio777/Sushi' ">Тут могла быть ваша реклама</button>
         <br>
+        <h2 id="sushi">Sushi</h2>
         <div class="container">
             <div class="product">
                 <img src="../Styles/img/photo0jpg.jpg" alt="Суши с терияки">
