--- a/Pages/main.html
+++ b/Pages/main.html
@@ -27,7 +27,7 @@
         <button style="width: 100%; height: 20%; background: white" onclick="document.location.href='https://github.com/DeLucio777/Sushi' ">Тут могла быть ваша реклама</button>
         <br>
         <h2 id="sushi">Sushi</h2>
-        <div class="container">
+        <div class="contain">
             <div class="product">
                 <img src="../Styles/img/photo0jpg.jpg" alt="Суши с терияки">
                 <h2>Суши с терияки</h2>
@@ -77,7 +77,7 @@
         </div>
 
     <h2 id="rolls">Роллы</h2>
-    <div class="container">
+    <div class="contain">
         <div class="product">
             <img src="../Styles/img/roll1.jpg" alt="Ролл Калифорния">
             <h2>Ролл Калифорния</h2>
@@ -91,7 +91,7 @@
     </div>
 
     <h2 id="drinks">Напитки</h2>
-    <div class="container">
+    <div class="contain">
         <div class="product">
             <img src="../Styles/img/drink1.jpg" alt="Зеленый чай">
             <h2>Зеленый чай</h2>
@@ -105,7 +105,7 @@
     </div>
 
     <h2 id="other">Другое</h2>
-    <div class="container">
+    <div class="contain">
         <div class="product">
             <img src="../Styles/img/other1.jpg" alt="Соевый соус">
             <h2>Соевый соус</h2>
