--- a/Pages/main.html
+++ b/Pages/main.html
@@ -3,12 +3,10 @@
         <title>главный по суши</title>
         <!-- <link rel="stylesheet" href="/Styles/index.css"> -->
         <link rel="stylesheet" href="../Styles/index.css">
-
     </head>
     <body class="container" text="white">
         <header class = "top-panel">
             <div class="custom-font">Суши</div>
-            <!--<input class="input" name="text" placeholder="Поиск..." type="search">!-->
             <div class="navbar">
                 <div class="nav-links">
                     <a href="#sushi">Суши</a>
@@ -16,7 +14,10 @@
                     <a href="#drinks">Напитки</a>
                     <a href="#other">Другое</a>
                 </div>
+            
+            
             </div>
+            <button class="cart-icon" onclick="goToPage('../Pages/index.html')"></button>
             <button class="profile-icon" onclick="goToPage('../Pages/register.html')"></button>
 
         </header>
