--- a/Pages/index.html
+++ b/Pages/index.html
@@ -13,7 +13,7 @@
     <br>
     <br>
         <div class="top-panel">
-            <div class="custom-font">Суши</div>
+            <div class="custom-font"><a href="../Pages/main.html" class="custom-font">Суши</a></div>
             <div class="profile-icon"></div>
         </div>
 
@@ -35,10 +35,14 @@
                 </div>
                 <button class="remove-item">Удалить</button>
             </div>
-            <!-- Добавьте больше элементов корзины по необходимости -->
         </div>
-
         <div class="total-price">Итого: 2500 руб.</div>
         <button class="checkout-button">Оформить заказ</button>
+        <button class="checkout-button" onclick="goToPage('../Pages/main.html')">Продолжить покупки</button>
 </body>
+<script>
+    function goToPage(url){
+            document.location.href = url
+        }
+</script>
 </html>
