--- a/Pages/main.html
+++ b/Pages/main.html
@@ -6,7 +6,7 @@
     </head>
     <body class="container" text="white">
         <header class = "top-panel">
-            <div class="custom-font">Суши</div>
+            <div class="custom-font"><a href="../Pages/main.html" class="custom-font">Суши</a></div>
             <div class="navbar">
                 <div class="nav-links">
                     <a href="#sushi">Суши</a>
@@ -118,6 +118,12 @@
         </div>
         <!-- Add more other products here -->
     </div>
+    <footer class="footer">
+        <a onclick="document.location.href='https://github.com/DeLucio777/Sushi' ">
+            Контакт с нами
+        </a>
+
+    </footer>
 
     </body>
     <script>
