--- a/Pages/main.html
+++ b/Pages/main.html
@@ -17,9 +17,10 @@
             
             
             </div>
+            <div>
             <button class="cart-icon" onclick="goToPage('../Pages/index.html')"></button>
             <button class="profile-icon" onclick="goToPage('../Pages/register.html')"></button>
-
+            </div>
         </header>
         <br>
         <br>
