--- a/Pages/index.html
+++ b/Pages/index.html
@@ -49,7 +49,15 @@
         <div class="total-price">Итого: 2500 руб.</div>
         <button class="checkout-button">Оформить заказ</button>
         <button class="checkout-button" onclick="goToPage('../Pages/main.html')">Продолжить покупки</button>
+        
 </body>
+<footer class="footer">
+    <a onclick="document.location.href='https://github.com/DeLucio777/Sushi' ">
+        Контакт с нами
+    </a>
+
+</footer>
+
 <script>
     function goToPage(url){
             document.location.href = url
